--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -1,5 +1,6 @@
 // variables & mixins
 @import "variables/bootstrap";
+@import "variables/bootstrap-select";
 @import "bootstrap/mixins";
 @import "variables/mixins";
 @import "flex";
@@ -12,25 +13,38 @@
 @import "bootstrap/type";
 @import "bootstrap/forms";
 @import "bootstrap/buttons";
+@import "bootstrap/dropdowns";
+@import "bootstrap/button-groups";
+@import "bootstrap/input-groups";
 @import "bootstrap/progress-bars";
 @import "bootstrap/panels";
 @import "bootstrap/utilities";
 
 
+// bootstrap-select
+@import "bootstrap-select";
+
+
 // common
 @import "common/main";
+@import "common/font";
 @import "common/icons";
 
 
 // forms
+@import "forms/bootstrap-select";
 @import "forms/btn";
+@import "forms/btn-sizes";
+@import "forms/caret";
+@import "forms/dropdown";
 @import "forms/form-control";
 @import "forms/form-group";
+@import "forms/help-block";
 @import "forms/panel";
-@import "forms/panel-primary";
 @import "forms/progress";
 
 
 // components
-@import "components/root";
 @import "components/signup";
+@import "components/step-done";
+@import "components/step-info";
