--- a/app/assets/sass/common/_icons.scss
+++ b/app/assets/sass/common/_icons.scss
@@ -16,7 +16,7 @@
   font: normal normal normal 14px/1 Star;
   font-size: inherit;
   text-rendering: auto;
-  vertical-align: sub;
+  vertical-align: middle;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
