--- a/app/assets/sass/common/_main.scss
+++ b/app/assets/sass/common/_main.scss
@@ -1,12 +1,11 @@
 html {
   width: 100%;
-  height: 100%;
 }
 body {
   min-width: 320px;
-  height: 100%;
   overflow-x: hidden;
-  font-weight: 300;
+  font-weight: $text-font-weight;
+  letter-spacing: -.3px;
   text-align: center;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -21,4 +20,17 @@ a {
   &:focus {
     outline: 0 none;
   }
+}
+
+
+// h's
+h1, h2, h3,
+.h1, .h2, .h3 {
+  letter-spacing: -.8px;
+  margin-top: 0;
+}
+h4, h5, h6,
+.h4, .h5, .h6 {
+  letter-spacing: -.3px;
+  margin-top: 0;
 }
