--- a/app/assets/sass/forms/_progress.scss
+++ b/app/assets/sass/forms/_progress.scss
@@ -1,5 +1,16 @@
 // progress
 .progress {
-  height: 14px;
+  @include box-shadow(none);
+  border-top: solid 1px $panel-inner-border;
+  border-bottom: solid 1px $panel-inner-border;
+  height: 10px;
   margin: 0;
+  overflow: visible;
+}
+
+
+// progress-bar
+.progress-bar {
+  margin: -1px 0;
+  height: 10px;
 }
